Regression: fix spacing classes

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -52,5 +52,4 @@ $nav-height-step: 25px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	margin: 0 auto;
 }
