--- a/src/assets/sass/components/_spacing.scss
+++ b/src/assets/sass/components/_spacing.scss
@@ -44,4 +44,5 @@ margin-left: 0 !important;
 
 .vertically-centered {
 	@include centered;
+	margin: 0 auto;
 }
